--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         const status = document.getElementById('status');
         form.addEventListener('submit', e => {
             e.preventDefault();
-            const scriptURL = 'https://unitsi.tsiconsultores.com.br:5678/webhook/9b46c9f2-8572-47a0-8af6-1c69be7f8a3f';
+            const scriptURL = 'http://unitsi.tsiconsultores.com.br:5678/webhook/9b46c9f2-8572-47a0-8af6-1c69be7f8a3f';
             const formData = new FormData(form);
             status.style.display = 'block';
             status.style.backgroundColor = '#f8f9fa';
